--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: xblog
+email: ""
+# this means to ignore newlines until "baseurl:"
+description: >
+  This is a personal mainly for techinical notes and stuff.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+# the base hostname & protocol for your site
+url: "http://zyxue.github.io"
+# twitter_username: jekyllrb
+github_username:  zyxue
 
 # Build settings
 markdown: kramdown
