--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: xblog
 email: ""
 # this means to ignore newlines until "baseurl:"
 description: >
-  This is a Zhuyi Xue's blog and techinical notes.
+  This is Zhuyi Xue's technical blog.
 baseurl: "" # the subpath of your site, e.g. /blog
 # the base hostname & protocol for your site
 url: "http://zyxue.github.io"
