--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,10 @@ title: xblog
 email: ""
 # this means to ignore newlines until "baseurl:"
 description: >
-  This is Zhuyi Xue's technical blog.
+  "This is Zhuyi Xue's technical blog."
+
+exclude: [Guardfile]
+
 baseurl: "" # the subpath of your site, e.g. /blog
 # the base hostname & protocol for your site
 url: "http://zyxue.github.io"
